--- a/components.json
+++ b/components.json
@@ -20,6 +20,7 @@
   },
   "registries": {
     "@ai-elements": "https://registry.ai-sdk.dev/{name}.json",
-    "@magicui": "https://magicui.design/r/{name}.json"
+    "@magicui": "https://magicui.design/r/{name}.json",
+    "@animate-ui": "https://animate-ui.com/r/{name}.json"
   }
 }
