--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-syntax-highlighter": "^15.6.6",
+    "shiki": "^3.13.0",
     "streamdown": "^1.3.0",
     "tailwind-merge": "^3.3.1",
     "tokenlens": "^1.3.1",
@@ -49,6 +50,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
